--- a/client/uschat/chatpage.ui
+++ b/client/uschat/chatpage.ui
@@ -221,6 +221,25 @@
            </property>
           </spacer>
          </item>
+         <item>
+          <widget class="ClickedLabel" name="more_lb">
+           <property name="minimumSize">
+            <size>
+             <width>30</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>30</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
       </item>
